--- a/photo-backbone/index.html
+++ b/photo-backbone/index.html
@@ -5,11 +5,18 @@
     <link rel='stylesheet' type='type/css' href='./styles/main.css' />
   </head>
   <body>
-    <div>Photo Library App</div>
+    <div id='app'></div>
      
     <script type='text/javascript' src='./bower_components/underscore/underscore-min.js'></script>
     <script type='text/javascript' src='./bower_components/jquery/dist/jquery.min.js'></script>
     <script type='text/javascript' src='./bower_components/backbone/backbone.js'></script>
+    <script type='text/javascript' src='./scripts/AppView.js'></script>
+    <script type='text/javascript' src='./scripts/TitleView.js'></script>
+    <script type='text/javascript' src='./scripts/TitleModel.js'></script>
+    <script type='text/javascript' src='./scripts/ImageListView.js'></script>
+    <script type='text/javascript' src='./scripts/ImageModel.js'></script>
+
+
     <script type='text/javascript' src='./scripts/app.js'></script>
   </body>
 </html>
