Implement ImageList and ImageListRow to display image descriptions in table

--- a/photo-backbone/index.html
+++ b/photo-backbone/index.html
@@ -10,11 +10,13 @@
     <script type='text/javascript' src='./bower_components/underscore/underscore-min.js'></script>
     <script type='text/javascript' src='./bower_components/jquery/dist/jquery.min.js'></script>
     <script type='text/javascript' src='./bower_components/backbone/backbone.js'></script>
-    <script type='text/javascript' src='./scripts/AppView.js'></script>
     <script type='text/javascript' src='./scripts/TitleView.js'></script>
     <script type='text/javascript' src='./scripts/TitleModel.js'></script>
-    <script type='text/javascript' src='./scripts/ImageListView.js'></script>
     <script type='text/javascript' src='./scripts/ImageModel.js'></script>
+    <script type='text/javascript' src='./scripts/ImageRowView.js'></script>
+    <script type='text/javascript' src='./scripts/ImageList.js'></script>    
+    <script type='text/javascript' src='./scripts/ImageListView.js'></script>
+    <script type='text/javascript' src='./scripts/AppView.js'></script>
 
 
     <script type='text/javascript' src='./scripts/app.js'></script>
