Implement ImageView and use default image from collection to populate

--- a/photo-backbone/index.html
+++ b/photo-backbone/index.html
@@ -16,9 +16,8 @@
     <script type='text/javascript' src='./scripts/ImageRowView.js'></script>
     <script type='text/javascript' src='./scripts/ImageList.js'></script>    
     <script type='text/javascript' src='./scripts/ImageListView.js'></script>
+    <script type='text/javascript' src='./scripts/ImageView.js'></script>
     <script type='text/javascript' src='./scripts/AppView.js'></script>
-
-
     <script type='text/javascript' src='./scripts/app.js'></script>
   </body>
 </html>
