--- a/photo-backbone/index.html
+++ b/photo-backbone/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id='app'></div>
+    <div class="clear"></div>
      
     <script type='text/javascript' src='./bower_components/underscore/underscore-min.js'></script>
     <script type='text/javascript' src='./bower_components/jquery/dist/jquery.min.js'></script>
