Add NewImageView to allow user to add an image

--- a/photo-backbone/index.html
+++ b/photo-backbone/index.html
@@ -18,6 +18,7 @@
     <script type='text/javascript' src='./scripts/ImageList.js'></script>    
     <script type='text/javascript' src='./scripts/ImageListView.js'></script>
     <script type='text/javascript' src='./scripts/ImageView.js'></script>
+    <script type='text/javascript' src='./scripts/NewImageView.js'></script>
     <script type='text/javascript' src='./scripts/AppModel.js'></script>
     <script type='text/javascript' src='./scripts/AppView.js'></script>
     <script type='text/javascript' src='./scripts/app.js'></script>
