--- a/photo-react/index.html
+++ b/photo-react/index.html
@@ -8,10 +8,11 @@
     <div id='app'></div>
     <div class="clear"></div>
      
-    <script src="bower_components/babel-core/browser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/react-dom.js"></script>
-    <script type='text/babel' src='./scripts/app.js'></script>
+    <script src="data/examplePhotoData.js"></script>
+    <script type='text/babel' src='./components/App.js'></script>
   </body>
 </html>
 
