--- a/photo-react/index.html
+++ b/photo-react/index.html
@@ -12,6 +12,8 @@
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/react-dom.js"></script>
     <script src="data/examplePhotoData.js"></script>
+    <script type='text/babel' src='./components/PhotoTableRow.js'></script>
+    <script type='text/babel' src='./components/PhotoTable.js'></script>
     <script type='text/babel' src='./components/App.js'></script>
   </body>
 </html>
