Add PhotoViewer Component, pass down click handler from App to PhotoTableRow

--- a/photo-react/index.html
+++ b/photo-react/index.html
@@ -14,6 +14,7 @@
     <script src="data/examplePhotoData.js"></script>
     <script type='text/babel' src='./components/PhotoTableRow.js'></script>
     <script type='text/babel' src='./components/PhotoTable.js'></script>
+    <script type='text/babel' src='./components/PhotoViewer.js'></script>
     <script type='text/babel' src='./components/App.js'></script>
   </body>
 </html>
