Add AddNewPhoto Component and include rating dropdown in PhotoViewer

--- a/photo-react/index.html
+++ b/photo-react/index.html
@@ -15,6 +15,7 @@
     <script type='text/babel' src='./components/PhotoTableRow.js'></script>
     <script type='text/babel' src='./components/PhotoTable.js'></script>
     <script type='text/babel' src='./components/PhotoViewer.js'></script>
+    <script type='text/babel' src='./components/AddNewPhoto.js'></script>
     <script type='text/babel' src='./components/App.js'></script>
   </body>
 </html>
